After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690703 - Date and AM/PM missing from top bar
Date and AM/PM missing from top bar
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: calendar
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2012-12-25 02:25 UTC by Eric Appleman
Modified: 2012-12-28 16:21 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Eric Appleman 2012-12-25 02:25:42 UTC
I've only seen this with 3.7.x builds. The toggle for these options are present but do not function.
Comment 1 Giovanni Campagna 2012-12-25 17:29:11 UTC
(Merry Christmas!)

What locale does this happen under?
Some locales don't define AM/PM strings, and in that case the clock is forced to 24h.
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-12-25 19:14:22 UTC
Most likely what happened was the move to GnomeDesktopWallClock meaning that the key names changed. If you changed org.gnome.shell.clock.* keys before, try changing org.gnome.clock.* now.
Comment 3 Eric Appleman 2012-12-25 21:01:59 UTC
org.gnome.clock does not exist in dconf
Comment 4 Eric Appleman 2012-12-25 22:00:52 UTC
Btw, I am en-US locale.
Comment 5 Giovanni Campagna 2012-12-25 22:14:20 UTC
(In reply to comment #3)
> org.gnome.clock does not exist in dconf

It's org.gnome.desktop.interface clock-format.
Comment 6 Eric Appleman 2012-12-25 22:33:19 UTC
The clock is already set to 12h. Enabling the date from dconf works.
Comment 7 Jacob Adamson 2012-12-27 10:56:17 UTC
I'm also experiencing this issue. I checked my dconf string (/org/gnome/desktop/interface/clock-format) and it does read '12h'. My locale is 'en_US.utf8'.
Comment 8 Jacob Adamson 2012-12-27 11:35:23 UTC
I did some digging, and it appears as though the bug is not stemming from gnome-shell, but gnome desktop. dateMenu calls GnomeDesktop.WallClock like it should for the top clock, but the time that is returned is not formatted correctly. WallClock checks for something called ampm_available (which is somehow derived from the locale). If this value is false, it will leave the hour formatted as 24h, even if the the setting is for 12h. I won't be able to look into it further for quite a while though.
Comment 9 Matthias Clasen 2012-12-28 16:21:19 UTC
There was a pretty obvious thinko in the code checking for AM/PM:

http://git.gnome.org/browse/gnome-desktop/commit/?id=0940370f82730359a7771aae750136e3fe6bfaa9