wallclock: Fix a thinko in checking for am/pm

We need to set ampm_available to TRUE when "AM" is available,
not to FALSE.
https://bugzilla.gnome.org/show_bug.cgi?id=690703